Load system default language
If the default system language is supported by Paint Job Packer, it is
loaded. If not, if a different dialect is supported, it will be loaded,
e.g. pt-PT instead of pt-BR. If none are supported, en_GB is loaded by
default, though this will change to en_US once it's ready.

The full stop is now just called the full stop (its British English
name) in en_GB, with the additional "/period" removed, as en_US will be
a separate language.

--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -127,8 +127,8 @@ ErrorVariableEmptyTitle=No {variable}
 ErrorVariableEmpty=Please enter your {variable}
 ErrorVariableCharacterTitle=Invalid character in {variable}
 ErrorVariableCharacter={variable} cannot contain the following characters:
-ErrorVariableFullStopTitle={variable} ends with full stop/period
-ErrorVariableFullStop={variable} cannot end with "." (full stop/period)
+ErrorVariableFullStopTitle={variable} ends with full stop
+ErrorVariableFullStop={variable} cannot end with "." (full stop)
 ErrorVariableInvalidTitle=Invalid {variable}
 ErrorVariableInvalid={variable} cannot be any of the following, as they are reserved file names:
 ErrorVariableInvalidNumber={variable} must be a number, with no other characters or spaces
