--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -69,6 +69,8 @@ InGameNameHelp1=The name of your paint job as it appears in-game in the vehicle 
 InGameNameExample=e.g. Transit Co
 InGamePrice=Price
 InGamePriceHelp1=How much your paint job costs in-game, in {currency}
+InGamePriceEuros=euros
+InGamePriceDollars=dollars
 InGamePriceExample=e.g. 6000
 InGameDefault=Unlocked by default
 InGameDefaultHelp1=Whether or not your paint job can be bought from level 0, such as on a brand new profile
