--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -109,11 +109,11 @@ VehicleNameAuthor={vehicle_name} by {mod_author}
 [GeneratingInfo]
 GeneratingOptions=Generating Options
 GenerateWorkshop=Generate files for Steam Workshop upload
-GenerateWorkshopHelp1=Generates additions files needed when uploading to Steam Workshop, including a workshop image, an uploading folder and a workshop description with working links to any modded vehicles you support.
+GenerateWorkshopHelp1=Generates additional files needed when uploading to Steam Workshop, including a workshop image, an uploading folder and a workshop description with working links to any modded vehicles you support.
 GenerateWorkshopHelp2=Requires the SCS Workshop Uploader, which only supports Windows.
 GenerateTemplates=Use templates instead of empty placeholders
 GenerateTemplatesHelp1=Uses templates instead of empty placholder files. If not selected, all .dds files will be empty white placeholder squares. If selected, all .dds files will be the appropriate templates (4k for trucks, 4k/2k for trailers) instead of empty images. Note that some parts on certain vehicles will still use empty images, as they have no paint job potential besides changing their colour.
-GenerateTemplatesHelp2=Requires templates to be installed for the game you're making a mod for.
+GenerateTemplatesHelp2=Requires templates to be installed to have any effect.
 SaveDirectory=Save Directory
 CurrentDirectory=Current directory
 SubfolderCreated=A subfolder will be created in your chosen directory
@@ -151,8 +151,8 @@ ErrorBus3=In order to make a paint job for a bus mod that works properly, try re
 ErrorBusSingle=This will affect the following vehicle:
 ErrorBusMultiple=This will affect the following vehicles that you've selected:
 ErrorFolderClearTitle=Output folder not clear
-ErrorFolderClear1=A folder called "Paint Job Packer Output" already exists in the directory that you chose, and it contains files.
-ErrorFolderClear2=Please delete the "Paint Job Packer Output" folder to continue.
+ErrorFolderClear1=A folder called {folder_name} already exists in the directory that you chose, and it contains files.
+ErrorFolderClear2=Please delete the {folder_name} folder to continue.
 ErrorFolderAccessTitle=Cannot access output folder
 ErrorFolderAccess1=Paint Job Packer doesn't have permission to copy files to the directory that you chose.
 ErrorFolderAccess2=Try picking a different save directory, or running Paint Job Packer as an admin.
