--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -112,7 +112,7 @@ GenerateWorkshop=Generate files for Steam Workshop upload
 GenerateWorkshopHelp1=Generates additional files needed when uploading to Steam Workshop, including a workshop image, an uploading folder and a workshop description with working links to any modded vehicles you support.
 GenerateWorkshopHelp2=Requires the SCS Workshop Uploader, which only supports Windows.
 GenerateTemplates=Use templates instead of empty placeholders
-GenerateTemplatesHelp1=Uses templates instead of empty placholder files. If not selected, all .dds files will be empty white placeholder squares. If selected, all .dds files will be the appropriate templates (4k for trucks, 4k/2k for trailers) instead of empty images. Note that some parts on certain vehicles will still use empty images, as they have no paint job potential besides changing their colour.
+GenerateTemplatesHelp1=Uses templates instead of empty placeholder files. If not selected, all .dds files will be empty white placeholder squares. If selected, all .dds files will be the appropriate templates (4k for trucks, 4k/2k for trailers) instead of empty images. Note that some parts on certain vehicles will still use empty images, as they have no paint job potential besides changing their colour.
 GenerateTemplatesHelp2=Requires templates to be installed to have any effect.
 SaveDirectory=Save Directory
 CurrentDirectory=Current directory
