Split error strings
All error strings containing {variable}s have been split apart producing
separate strings for each possible error. This is to make translation
more straightforward, as many of the words would otherwise be context-
sensitive, differing between various variables, making the old system
untenable.

--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -37,14 +37,14 @@ LinkForum=Forum thread
 LinkGithub=GitHub page
 LinkKofi=Support Paint Job Packer
 AcknowledgementNotice=This software was created in Australia on Darramurragal Land, click here for more info
-UpdateNotice=New version available! - v{version_number} - Click here to go to download page
+UpdateNotice=New version available! - v{version_number} - Click here to download
 UpdateDetails=This update includes: {details}
 PaintJobSingle=Single paint job
 PaintJobSingleDesc=A single paint job for a single vehicle
 PaintJobPack=Paint job pack
 PaintJobPackDesc=One paint job that supports multiple vehicles
 AboutMIT=Licensed under the MIT Licence
-AboutBSD=Licensed under the 3-Clause BSD License
+AboutBSD=Licensed under the 3-Clause BSD Licence
 AboutDeveloper=Developer:
 AboutContributors=Contributors:
 AboutTranslators=Translators:
@@ -53,19 +53,19 @@ AboutSupporters=Supporters:
 [ModInfo]
 ModInfoPanelName=Mod Info
 ModName=Mod name
-ModNameHelp1=The name of your mod, as it appears in the in-game mod manager
+ModNameHelp1=Your mod's name, shown in the mod manager
 ModNameExample=e.g. Transit Co Paint Job Pack
 ModVersion=Version
-ModVersionHelp1=The version of your mod, as it appears in the in-game mod manager
+ModVersionHelp1=Your mod's version, shown in the mod manager
 ModVersionExample=e.g. 1.0
 ModAuthor=Author
-ModAuthorHelp1=The author of your mod, as it appears in the in-game mod manager
+ModAuthorHelp1=Your mod's author (your name), shown in the mod manager
 ModAuthorExample=e.g. Carsmaniac
 
 [InGamePaintJobInfo]
 InGamePaintJobInfoPanelName=In-Game Paint Job Info
 InGameName=Paint job name
-InGameNameHelp1=The name of your paint job as it appears in-game in the vehicle purchase/upgrade screen
+InGameNameHelp1=Your paint job's name, shown at the upgrade shop in-game
 InGameNameExample=e.g. Transit Co
 InGamePrice=Price
 InGamePriceHelp1=How much your paint job costs in-game, in {currency}
@@ -75,7 +75,7 @@ InGamePriceExample=e.g. 6000
 InGameDefault=Unlocked by default
 InGameDefaultHelp1=Whether or not your paint job can be bought from level 0, such as on a brand new profile
 InGameUnlock=Unlock level
-InGameUnlockHelp1=If not unlocked by default, what level your paint job is made purchasable at
+InGameUnlockHelp1=If not unlocked by default, what level your paint job is purchasable from
 InGameUnlockExample=e.g. 11
 
 [InternalInfo]
@@ -124,21 +124,49 @@ ProgressAppearHere=Progress will appear here
 
 [ErrorMessages]
 ErrorSingle=Error: {error_name}
-ErrorMultiple={number} Errors
-ErrorVariableEmptyTitle=No {variable}
-ErrorVariableEmpty=Please enter your {variable}
-ErrorVariableCharacterTitle=Invalid character in {variable}
-ErrorVariableCharacter={variable} cannot contain the following characters:
-ErrorVariableFullStopTitle={variable} ends with full stop
-ErrorVariableFullStop={variable} cannot end with "." (full stop)
-ErrorVariableInvalidTitle=Invalid {variable}
-ErrorVariableInvalid={variable} cannot be any of the following, as they are reserved file names:
-ErrorVariableInvalidNumber={variable} must be a number, with no other characters or spaces
-ErrorVariableInvalidInternal={variable} must only contain lowercase letters, numbers and underscores
-ErrorVariableASCIITitle=Non-ASCII characters in {variable}
-ErrorVariableASCII={variable} can only consist of ASCII characters, consisting of the following:
-ErrorInternalLongTitle={variable} too long
-ErrorInternalLong={variable} is too long, it must be {length} characters or fewer
+ErrorMultiple=Multiple errors
+ErrorModNameEmptyTitle=Mod name is blank
+ErrorModNameEmpty=Please enter a mod name
+ErrorModNameCharacterTitle=Invalid character in mod name
+ErrorModNameCharacter=Mod name cannot contain the following characters:
+ErrorModNameFullStopTitle=Mod name ends with a full stop
+ErrorModNameFullStop=Mod name cannot end with "." (full stop)
+ErrorModNameInvalidTitle=Mod name is invalid
+ErrorModNameInvalid=Mod name cannot be any of the following:
+ErrorModVersionEmptyTitle=Version is empty
+ErrorModVersionEmpty=Please enter a version
+ErrorModVersionCharacterTitle=Invalid character in version
+ErrorModVersionCharacter=Version cannot contain the following characters:
+ErrorModAuthorEmptyTitle=Author is empty
+ErrorModAuthorEmpty=Please enter an author
+ErrorModAuthorCharacterTitle=Invalid character in author
+ErrorModAuthorCharacter=Author cannot contain the following characters:
+ErrorInGameNameEmptyTitle=Paint job name is blank
+ErrorInGameNameEmpty=Please enter a paint job name
+ErrorInGameNameCharacterTitle=Invalid character in paint job name
+ErrorInGameNameCharacter=Paint job name cannot contain the following characters:
+ErrorInGameNameFullStopTitle=Paint job name ends with a full stop
+ErrorInGameNameFullStop=Paint job name cannot end with "." (full stop)
+ErrorInGameNameInvalidTitle=Paint job name is invalid
+ErrorInGameNameInvalid=Paint job name cannot be any of the following:
+ErrorInGameNameAsciiTitle=Non-ASCII characters in paint job name
+ErrorInGameNameAscii=Paint job name can only contain ASCII characters, which are the following:
+ErrorInGamePriceEmptyTitle=Price is blank
+ErrorInGamePriceEmpty=Please enter a price
+ErrorInGamePriceCharacterTitle=Invalid character in price
+ErrorInGamePriceCharacter=Price must be a number, with no other characters or spaces
+ErrorInGameUnlockEmptyTitle=Unlock level is blank
+ErrorInGameUnlockEmpty=Please enter an unlock level
+ErrorInGameUnlockCharacterTitle=Invalid character in unlock level
+ErrorInGameUnlockCharacter=Unlock level must be a number, with no other characters or spaces
+ErrorInternalNameEmptyTitle=Internal name is blank
+ErrorInternalNameEmpty=Please enter an internal name
+ErrorInternalNameLongTitle=Internal name is too long
+ErrorInternalNameLong=Internal name is too long, it must be {length} characters or fewer
+ErrorInternalNameCharacterTitle=Invalid character in internal name
+ErrorInternalNameCharacter=Internal name can only contain lowercase letters, numbers and underscores
+ErrorInternalNameInvalidTitle=Internal name is invalid
+ErrorInternalNameInvalid=Internal name cannot be any of the following:
 ErrorSelectVehicleSingleTitle=No vehicle selected
 ErrorSelectVehicleSingle=Please select a vehicle to support
 ErrorSelectVehiclePackTitle=No vehicles selected
