Reword cabin handling
The wording of cabin handling, its options and its help message has been
reworded, switching from a metaphor of combined vs. separate paint jobs
to one of split vs. unsplit paint jobs. This is easier to understand and
should hopefully be more straightforward to translate.

--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -91,12 +91,12 @@ InternalSupportedAll=All cabins
 InternalSupportedHelp1=Whether your paint job supports only the largest cabin for each truck, or all cabins.
 InternalSupportedHelp2=Note that the 8x4 chassis uses a separate cabin in some cases, which would not be supported if you choose largest cabin only.
 InternalSupportedExample=e.g. If you're making a paint job for the Scania S, a "largest cabin only" paint job would only support the High Roof Cabin, whereas an "all cabins" paint job would support the Normal Roof and High Roof cabins, as well as the separate High Roof 8x4 cabin.
-InternalHandling=Cabin handling
-InternalHandlingCombined=Combined paint job
-InternalHandlingSeparate=Separate paint jobs
-InternalHandlingHelp1=Whether multiple cabins should be combined into a single paint job, or separated into multiple paint jobs.
-InternalHandlingHelp2=A single combined paint job requires less work and results in a smaller mod size, as you only need to make a single cabin texture for each truck. However, your design might not work across all the different cabin sizes, for example your design could look correct on large cabins, but be positioned incorrectly/stretched/cut off on smaller cabins.
-InternalHandlingHelp3=Separate paint jobs allow you to tweak your design to work for each cabin, but require more work and result in a larger mod size, as you need to make separate textures for every cabin whether they need them or not.
+InternalHandling=Split paint jobs
+InternalHandlingCombined=Don't split, one per truck
+InternalHandlingSeparate=Split, one per cabin
+InternalHandlingHelp1=Whether to make a single paint job for each truck, or to split it up and make one for each cabin.
+InternalHandlingHelp2=A single paint job per truck requires less work and results in a smaller mod size, as you only need to make a single cabin texture for each truck. However, your design might not work across all the different cabin sizes, for example your design could look correct on large cabins, but be positioned incorrectly/stretched/cut off on smaller cabins.
+InternalHandlingHelp3=Split paint jobs allow you to tweak your design to work for each cabin size, but require more work and result in a larger mod size, as you need to make separate textures for every cabin whether they need them or not.
 
 [VehiclesInfo]
 VehiclesPanelNameSingle=Vehicle Supported
