Check for trailing space in mod/paint job name
Paint job name and mod name are now checked for a trailing space just as
they are for a trailing full stop, as it is not permitted by the Windows
file system. Commonly used ACII control characters are now stripped from
the names as well.

--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -131,6 +131,8 @@ ErrorModNameCharacterTitle=Invalid character in mod name
 ErrorModNameCharacter=Mod name cannot contain the following characters:
 ErrorModNameFullStopTitle=Mod name ends with a full stop
 ErrorModNameFullStop=Mod name cannot end with "." (full stop)
+ErrorModNameSpaceTitle=Mod name ends with a space
+ErrorModNameSpace=Mod name cannot end with a space
 ErrorModNameInvalidTitle=Mod name is invalid
 ErrorModNameInvalid=Mod name cannot be any of the following:
 ErrorModVersionEmptyTitle=Version is empty
@@ -147,6 +149,8 @@ ErrorInGameNameCharacterTitle=Invalid character in paint job name
 ErrorInGameNameCharacter=Paint job name cannot contain the following characters:
 ErrorInGameNameFullStopTitle=Paint job name ends with a full stop
 ErrorInGameNameFullStop=Paint job name cannot end with "." (full stop)
+ErrorInGameNameSpaceTitle=Paint job name ends with a space
+ErrorInGameNameSpace=Paint job name cannot end with a space
 ErrorInGameNameInvalidTitle=Paint job name is invalid
 ErrorInGameNameInvalid=Paint job name cannot be any of the following:
 ErrorInGameNameAsciiTitle=Non-ASCII characters in paint job name
