--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -1,4 +1,5 @@
 [General]
+LanguageName=English (UK)
 GameATS=American Truck Simulator
 GameETS=Euro Truck Simulator 2
 Truck=Truck
@@ -24,7 +25,7 @@ BackToSetup=Back to setup
 GenerateSave=Generate and save...
 Generate=Generate
 ChangeDirectory=Change...
-Okay=Okay
+Close=Close
 
 [Setup]
 TabWelcome=Welcome
