Add link to Crowdin project in About screen
A link to help translate Paint Job Packer has been added below the list
of translators on the About screen.

--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -37,6 +37,7 @@ TabPaintJobsMessage=How many paint jobs are you making?
 LinkForum=Forum thread
 LinkGithub=GitHub page
 LinkKofi=Support Paint Job Packer
+LinkTranslate=Help translate Paint Job Packer
 AcknowledgementNotice=This software was created in Australia on Darramurragal Land, click here for more info
 UpdateNotice=New version available! - v{version_number} - Click here to download
 UpdateDetails=This update includes: {details}
