Remove fixed button widths and reword two buttons
A few buttons have had their fixed widths removed, as the Sun Valley UI
theme provides ample padding, and their widths will change in different
languages. The "Generate and save" and "Change" buttons have also had
their ellipses removed as they were unnecessary.

--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -22,9 +22,9 @@ Continue=Continue
 Back=Back
 About=About
 BackToSetup=Back to setup
-GenerateSave=Generate and save...
+GenerateSave=Generate and save
 Generate=Generate
-ChangeDirectory=Change...
+ChangeDirectory=Change
 Close=Close
 
 [Setup]
