Reformat English dialect names
Commas are now used instead of parentheses as they look a bit nicer, and
will not proc QA issues on Crowdin due to their absence.

--- a/lang/en_US.ini
+++ b/lang/en_US.ini
@@ -1,5 +1,5 @@
 [General]
-LanguageName=English (US) ; The name of your language in your language, e.g. Français, Čeština etc.
+LanguageName=English, US ; The name of your language in your language, e.g. Français, Čeština etc.
 GameATS=American Truck Simulator
 GameETS=Euro Truck Simulator 2
 Truck=Truck ; Used in a dropdown to choose which kind of vehicle to support: Truck, Trailer, Truck Mod, Bus Mod or Trailer Mod
