Possibly fix unescaped localisation comment
The ErrorSingle context comment was the only comment not separated from
the string by a space, and in some cases it showed up in the UI. The
space has been removed, and the comment no longer appears. This may have
been the cause of the bug, but if not, it's nonetheless a small
improvement to the file's tidiness.

--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -124,7 +124,7 @@ ProgressReady=Ready to generate mod ; While the mod is generating, the progress 
 ProgressAppearHere=Progress will appear here ; While the mod is generating, the progress panel shows three things: a progress bar, the category of files being generated, and the specific file being generated at the time. Before the mod starts generating, the category and specific are replaced by placeholders (Ready to generate mod/Progress will appear here), the second of which is this string.
 
 [ErrorMessages]
-ErrorSingle=Error: {error_name}; The title of the error popup when there's only a single error, for example: "Error: Invalid character in Mod name"
+ErrorSingle=Error: {error_name} ; The title of the error popup when there's only a single error, for example: "Error: Invalid character in mod name"
 ErrorMultiple=Multiple errors ; The title of the error popup when there are multiple errors
 ErrorModNameEmptyTitle=Mod name is blank ; The title of the error when the mod name is left blank
 ErrorModNameEmpty=Please enter a mod name ; The message of the error when the mod name is left blank
