Add analytics info to the About screen
Information about the RudderStack Python SDK has been added to the About
screen, as has information about the analytics itself. As the About
screen has grown so much, it has been redesigned as a tabbed interface,
with each component presented on its own tab.

--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -51,6 +51,16 @@ AboutDeveloper=Developer: ; Used on the About screen for the main developer of e
 AboutContributors=Contributors: ; Used on the About screen to list other people that contributed to each project on GitHub
 AboutTranslators=Translators: ; Used on the About screen to list people who helped translate Paint Job Packer, including you! :)
 AboutSupporters=Supporters: ; Used on the About screen to list people who financially support Paint Job Packer by joining the $1/month membership on the Ko-fi page
+AnalyticsTitle=Analytics ; Used on the About screen as the title of the analytics tab
+Analytics1=Paint Job Packer uses RudderStack to collect anonymous usage data. The following information is collected: ; The first part of the analytics information on the About screen
+Analytics2=1. Software version ({version}) ; The second part of the analytics information on the About screen, {version} is the currently installed version
+Analytics3=2. Operating system: ({operating_system}) ; The third part of the analytics information on the About screen, {operating_system} is the user's OS
+Analytics4=3. System language: ({language}) ; The fourth part of the analytics information on the About screen, {language} is the default system language, if detected
+Analytics5=4. A list of the trucks/trailers supported in your mod ; The fifth part of the analytics information on the About screen
+Analytics6=This information lets me know which features of the program are used most often, to help me prioritise what to develop first. ; The sixth part of the analytics information on the About screen
+Analytics7=No personal information like IP address, username, unique ID etc. is collected, and it never will be. ; The seventh part of the analytics information on the About screen
+Analytics8=Analytics is collected by a dedicated script, and you can read through its code by clicking here. Everything in it is explained, so you don't need to be a programmer to understand it. ; The eighth part of the analytics information on the About screen. This is a clickable link, which opens the analytics script in a browser window
+Analytics9=Thanks for helping me improve Paint Job Packer :) ; The ninth part of the analytics information on the About screen
 
 [ModInfo]
 ModInfoPanelName=Mod Info ; The name of the section where you enter your mod info: your mod's name and version, and the name of the author
