Send crash reports to the developer
If Paint Job Packer crashes, instead of being presented with a "copy
error to clipboard" button, users will now have a "send error to
developer" button, which will send the error report and all relevant
data using RudderStack.

--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -62,6 +62,14 @@ Analytics7=No personal information like IP address, username, unique ID etc. is 
 Analytics8=Analytics is collected by a dedicated script, and you can read through its code by clicking here. Everything in it is explained, so you don't need to be a programmer to understand it. ; The eighth part of the analytics information on the About screen. This is a clickable link, which opens the analytics script in a browser window
 Analytics9=Thanks for helping me improve Paint Job Packer :) ; The ninth part of the analytics information on the About screen
 
+[FancyError]
+FancyTitle = Paint Job Packer ran into an unexpected error and needs to exit ; Text displayed at the top of the crash screen, with the crash message below
+FancyPlease = Please send this crash report to the developer ; Text displayed in the middle of the crash screen, with the send/don't send buttons below
+FancySend = Send to developer ; Button to send the crash report to the developer, then quit
+FancyDontSend = Don't send ; Button to not send the crash report to the developer, and just quit
+FancySending = Sending... ; The "Send to Developer" button turns into this after it is clicked, while sending
+FancySorry = Thank you, and sorry for the inconvenience! ; Apology at the bottom of the crash screen
+
 [ModInfo]
 ModInfoPanelName=Mod Info ; The name of the section where you enter your mod info: your mod's name and version, and the name of the author
 ModName=Mod name ; Label for the mod name text entry
