Update localisation files with more strings
The en_US and cs_CZ language files have been updated with strings
related to analytics and crash reporting. The crash strings have not
yet been translated into Czech, so the English ones will be used as a
fallback.

--- a/lang/cs_CZ.ini
+++ b/lang/cs_CZ.ini
@@ -51,6 +51,24 @@ AboutDeveloper=Vývojář: ; Used on the About screen for the main developer of 
 AboutContributors=Výpomoc: ; Used on the About screen to list other people that contributed to each project on GitHub
 AboutTranslators=Překladatelé: ; Used on the About screen to list people who helped translate Paint Job Packer, including you! :)
 AboutSupporters=Podpořili: ; Used on the About screen to list people who financially support Paint Job Packer by joining the $1/month membership on the Ko-fi page
+AnalyticsTitle=Telemetrie ; Used on the About screen as the title of the analytics tab
+Analytics1=Paint Job Packer používá RudderStack ke kolekci anonymních dat. Následující data jsou sbírána: ; The first part of the analytics information on the About screen
+Analytics2=1. Verze softwaru ({version}) ; The second part of the analytics information on the About screen, {version} is the currently installed version
+Analytics3=2. Operační systém ({operating_system}) ; The third part of the analytics information on the About screen, {operating_system} is the user's OS
+Analytics4=3. Jazyk: ({language}) ; The fourth part of the analytics information on the About screen, {language} is the default system language, if detected
+Analytics5=4. Seznam tahačů a návěsů pro které je tvůj mod určen ; The fifth part of the analytics information on the About screen
+Analytics6=Tyto informace mi poskytují zpětnou vazbu ohledně často používaných funkcí, na základě které jsou tyto funkce vylepšovány. ; The sixth part of the analytics information on the About screen
+Analytics7=Žádná osobní data (IP adresa, přezdívky, unikátní ID, apod.) nejsou a nebudou součástí odesílané telemetrie. ; The seventh part of the analytics information on the About screen
+Analytics8=Telemetrie je shromažďována samostatným scriptem, který můžeš prozkoumat zde. Vše je vysvětleno, nemusíš být programátor abys tomu porozuměl. ; The eighth part of the analytics information on the About screen. This is a clickable link, which opens the analytics script in a browser window
+Analytics9=Díky, že se podílíš na vylepšování Paint Job Packeru ; The ninth part of the analytics information on the About screen
+
+[FancyError]
+FancyTitle=Paint Job Packer ran into an unexpected error and needs to exit ; Text displayed at the top of the crash screen, with the crash message below
+FancyPlease=Please send this crash report to the developer ; Text displayed in the middle of the crash screen, with the send/don't send buttons below
+FancySend=Send to developer ; Button to send the crash report to the developer, then quit
+FancyDontSend=Don't send ; Button to not send the crash report to the developer, and just quit
+FancySending=Sending... ; The "Send to Developer" button turns into this after it is clicked, while sending
+FancySorry=Thank you, and sorry for the inconvenience! ; Apology at the bottom of the crash screen
 
 [ModInfo]
 ModInfoPanelName=Informace o modu ; The name of the section where you enter your mod info: your mod's name and version, and the name of the author
@@ -124,7 +142,7 @@ ProgressReady=Připraveno na vytoření modu ; While the mod is generating, the 
 ProgressAppearHere=Postup se zobrazí zde ; While the mod is generating, the progress panel shows three things: a progress bar, the category of files being generated, and the specific file being generated at the time. Before the mod starts generating, the category and specific are replaced by placeholders (Ready to generate mod/Progress will appear here), the second of which is this string.
 
 [ErrorMessages]
-ErrorSingle=Chyba: {error_name} ; The title of the error popup when there's only a single error, for example: "Error: Invalid character in Mod name"
+ErrorSingle=Chyba: {error_name} ; The title of the error popup when there's only a single error, for example: "Error: Invalid character in mod name"
 ErrorMultiple=Chtělo by to pár věcí opravit ; The title of the error popup when there are multiple errors
 ErrorModNameEmptyTitle=Název modu je prázdný ; The title of the error when the mod name is left blank
 ErrorModNameEmpty=Zadej název modu ; The message of the error when the mod name is left blank
