--- a/lang/en_GB.ini
+++ b/lang/en_GB.ini
@@ -140,6 +140,12 @@ SaveDialogueTitle=Save Mod (subfolder will be created) ; The title of the window
 GeneratingProgress=Progress ; The name of the section that shows the progress of mod generation in real time. Directly below this string is an empty progress bar that begins filling up once the user clicks "Generate". It shows a visual representation of what Paint Job Packer is doing, which is especially helpful as larger mod packs can take several seconds to generate, especially if you choose to use the included templates.
 ProgressReady=Ready to generate mod ; While the mod is generating, the progress panel shows three things: a progress bar, the category of files being generated, and the specific file being generated at the time. Before the mod starts generating, the category and specific are replaced by placeholders (Ready to generate mod/Progress will appear here), the first of which is this string.
 ProgressAppearHere=Progress will appear here ; While the mod is generating, the progress panel shows three things: a progress bar, the category of files being generated, and the specific file being generated at the time. Before the mod starts generating, the category and specific are replaced by placeholders (Ready to generate mod/Progress will appear here), the second of which is this string.
+ProgressFinishing = Finishing up... ; Replaces "Ready to generate mod" while the analytics upload is finishing in the background
+ProgressSeconds = This shouldn't take more than a few seconds ; Replaces "Progress will appear here" while the analytics upload is finishing in the background
+ProgressCompleteTitle = Mod generation complete ; The title of the popup that appears when the mod has finished generating
+ProgressComplete1 = Your mod has been generated, and placed in the directory that you chose, inside a folder called {folder_name}. ; The first part of the popup that appears when the mod has finished generating
+ProgressComplete2 = Your mod is not yet finished, refer to the text file inside the folder for instructions. There is also a guide on the GitHub page. ; The second part of the popup that appears when the mod has finished generating
+ProgressComplete3 = Thanks for using Paint Job Packer! :) ; The third part of the popup that appears when the mod has finished generating
 
 [ErrorMessages]
 ErrorSingle=Error: {error_name} ; The title of the error popup when there's only a single error, for example: "Error: Invalid character in mod name"
