Update localisation and add 5 new languages
Each language .ini has been updated with the new strings related to long
file paths, although they're only translated into Czech for now.

Five new languages have also been added; Finnish, French (partial),
Brazilian Portuguese, European Portuguese and Swedish. The credits page
in the About screen has been updated accordingly.

--- a/lang/cs_CZ.ini
+++ b/lang/cs_CZ.ini
@@ -211,3 +211,7 @@ ErrorFolderClear2=Pokud chceš pokračovat, smaž {folder_name}. ; The second pa
 ErrorFolderAccessTitle=Nelze získat přístup k vybrané složce ; The title of the error when Paint Job Packer cannot access the chosen save directory
 ErrorFolderAccess1=Paint Job Packer nemá oprávnění k přístupu složky, kterou jsi vybral. ; The first part of the error message when Paint Job Packer cannot access the chosen save directory
 ErrorFolderAccess2=Vyber jiné umístění pro ukládání anebo zkus spustit Paint Job Packer jako Administrátor. ; The second part of the error message when Paint Job Packer cannot access the chosen save directory
+ErrorLongPathTitle=Cesta k cílové složce je příliš dlouhá ; The title of the error when the chosen output folder causes the file path to be too long
+ErrorLongPath1=Paint job Packer nemá přístup ke zvolenému adresáři, protože cesta k cílovému souboru je příliš dlouhá. ; The first part of the error message when the chosen output folder causes the file path to be too long
+ErrorLongPath2=Vyber kratší cílovou složku, třeba "Users/(username)/Plocha" místo "Users/(username)/Plocha/Hry/Truck Simulator/Paint Job Packer/Mody/Můj Nový Mod" ; The second part of the error message when the chosen output folder causes the file path to be too long
+ErrorLongPath3=Kvůli omezením v systému Windows, celková cesta k souboru může mít maximálně 260 znaků. Tvoje zvolená cílová cesta byla příliš dlouhá a tak přesáhla tento limit. ; The third part of the error message when the chosen output folder causes the file path to be too long
