--- a/lang/ru_RU.ini
+++ b/lang/ru_RU.ini
@@ -211,3 +211,8 @@ ErrorFolderClear2=Пожалуйста, удалите папку {folder_name},
 ErrorFolderAccessTitle=Не удается получить доступ к папке ; The title of the error when Paint Job Packer cannot access the chosen save directory
 ErrorFolderAccess1=У программы Paint Job Packer нет разрешения на копирование файлов в выбранный вами каталог. ; The first part of the error message when Paint Job Packer cannot access the chosen save directory
 ErrorFolderAccess2=Попробуйте выбрать другой каталог сохранения или запустить Paint Job Packer от имени администратора. ; The second part of the error message when Paint Job Packer cannot access the chosen save directory
+ErrorLongPathTitle=Output path length is too long ; The title of the error when the chosen output folder causes the file path to be too long
+ErrorLongPath1=Paint Job Packer can't access the directory that you chose because the file path is too long. ; The first part of the error message when the chosen output folder causes the file path to be too long
+ErrorLongPath2=Try choosing an output location with a shorter length, e.g. just "Users/(username)/Desktop" instead of "Users/(username)/Desktop/Games/Truck Simulator/Paint Job Packer mods/Mod output/My cool new mod" ; The second part of the error message when the chosen output folder causes the file path to be too long
+ErrorLongPath3=Due to limitations in Windows, file paths can only be 260 characters long by default. Your chosen output directory's path was long enough that at one point Paint Job Packer needed to make a file with a path more than 260 characters long. ; The third part of the error message when the chosen output folder causes the file path to be too long
+
