Add 7 languages and update 5
Thanks to the contributions of the community on Crowdin, 7 new languages
have been added, and 5 have been updated with newly translated strings.
As well as the language files themselves, the About screen has been updated,
and slightly rearranged to fit the >20 (!) translators' names.

--- a/lang/cs_CZ.ini
+++ b/lang/cs_CZ.ini
@@ -215,6 +215,6 @@ ErrorLongPathTitle=Cesta k cílové složce je příliš dlouhá ; The title of 
 ErrorLongPath1=Paint job Packer nemá přístup ke zvolenému adresáři, protože cesta k cílovému souboru je příliš dlouhá. ; The first part of the error message when the chosen output folder causes the file path to be too long
 ErrorLongPath2=Vyber kratší cílovou složku, třeba "Users/(username)/Plocha" místo "Users/(username)/Plocha/Hry/Truck Simulator/Paint Job Packer/Mody/Můj Nový Mod" ; The second part of the error message when the chosen output folder causes the file path to be too long
 ErrorLongPath3=Kvůli omezením v systému Windows, celková cesta k souboru může mít maximálně 260 znaků. Tvoje zvolená cílová cesta byla příliš dlouhá a tak přesáhla tento limit. ; The third part of the error message when the chosen output folder causes the file path to be too long
-ErrorNoSpaceTitle=Not enough drive space ; The title of the error when there's not enough space on the chosen output drive
-ErrorNoSpace1=There's not enough free space on the drive you chose. ; The first part of the error message when there's not enough space on the chosen output drive
-ErrorNoSpace2=Please free up some drive space, or choose an output directory on a different drive. ; The second part of the error message when there's not enough space on the chosen output drive
+ErrorNoSpaceTitle=Nedostatek místa na disku ; The title of the error when there's not enough space on the chosen output drive
+ErrorNoSpace1=Na zvoleném disku není dostatek volného místa. ; The first part of the error message when there's not enough space on the chosen output drive
+ErrorNoSpace2=Uvolni místo na disku nebo zvol jiné cílové umístění. ; The second part of the error message when there's not enough space on the chosen output drive
